==> aws/amazon-freertos/vendors/cypress/boards/CY8CKIT_064S0S2_4343W/ports/pkcs11/core_pkcs11_pal.c <==
#include "core_pkcs11.h"
#include "FreeRTOS.h"
#include "cyobjstore.h"
#include "core_pkcs11_config.h"
#include <stdio.h>
#include <string.h>
#include <stdbool.h>
#include <stdlib.h>

CK_OBJECT_HANDLE PKCS11_PAL_SaveObject( CK_ATTRIBUTE_PTR pxLabel,
    uint8_t * pucData,
    uint32_t ulDataSize )
{
    CK_OBJECT_HANDLE xHandle ;

    if (cy_objstore_initialize(false, 1) != CY_RSLT_SUCCESS)
        return eInvalidHandle ;

    prvLabelToFilenameHandle( pxLabel->pValue, &xHandle );

    if (cy_objstore_store_object(xHandle, pucData, ulDataSize) != CY_RSLT_SUCCESS)
        return eInvalidHandle ;

    return  xHandle ;
}

CK_OBJECT_HANDLE PKCS11_PAL_FindObject( uint8_t * pLabel,
    uint8_t usLength )
{
    CK_OBJECT_HANDLE xHandle ;

    if (cy_objstore_initialize(false, 1) != CY_RSLT_SUCCESS)
        return eInvalidHandle ;

    prvLabelToFilenameHandle( pLabel, &xHandle );

    if (cy_objstore_find_object(xHandle, NULL, NULL) != CY_RSLT_SUCCESS)
        return eInvalidHandle ;

    return xHandle ;
}

CK_RV PKCS11_PAL_GetObjectValue( CK_OBJECT_HANDLE xHandle,
    uint8_t ** ppucData,
    uint32_t * pulDataSize,
    CK_BBOOL * pIsPrivate )
{
    uint32_t index, size ;
    cy_rslt_t res ;

    if (cy_objstore_initialize(false, 1) != CY_RSLT_SUCCESS)
        return CKR_FUNCTION_FAILED ;

    if( xHandle == eAwsDeviceCertificate )
    {
        *pIsPrivate = CK_FALSE;
    }
    else if( xHandle == eAwsDevicePrivateKey )
    {
        *pIsPrivate = CK_TRUE;
    }
    else if( xHandle == eAwsDevicePublicKey )
    {
        /* Public and private key are stored together in same file. */
        *pIsPrivate = CK_FALSE;
    }
    else if( xHandle == eAwsCodeSigningKey )
    {
        *pIsPrivate = CK_FALSE;
    }
    else
    {
        return CKR_KEY_HANDLE_INVALID;
    }

    if (cy_objstore_find_object(xHandle, &index, &size) != CY_RSLT_SUCCESS)
    {
        configPRINT_STRING("cyafr: pkcs11: handle that previously existed is gone, internal error") ;
        return CKR_FUNCTION_FAILED ;
    }

    *pulDataSize = size ;

    *ppucData = (uint8_t *)malloc(size) ;
    if (*ppucData == NULL)
        return CKR_DEVICE_MEMORY ;

    res = cy_objstore_read_object(xHandle, *ppucData, size) ;
    if (res != CY_RSLT_SUCCESS)
    {
        free(*ppucData) ;
        configPRINT_STRING("cyafr: pkcs11: object store read operation failed") ;
        return CKR_FUNCTION_FAILED ;
    }

    return CKR_OK ;
}

CK_RV PKCS11_PAL_DestroyObject( CK_OBJECT_HANDLE xHandle )
{
    CK_RV xResult = CKR_OK;
    CK_BYTE_PTR pxObject = NULL;
    CK_BBOOL xIsPrivate = ( CK_BBOOL ) CK_TRUE;
    CK_ULONG ulObjectLength = sizeof( CK_BYTE );
    uint8_t * pcLabel = NULL;

    prvLabelToFilenameHandle( pcLabel, &xHandle );

    if( pcLabel != NULL )
    {
        xResult = PKCS11_PAL_GetObjectValue( xHandle, &pxObject, &ulObjectLength, &xIsPrivate );
    }   
    else
    {
        xResult = CKR_OBJECT_HANDLE_INVALID;
    }   

    if( xResult == CKR_OK )
    {
        if (cy_objstore_delete_object(xHandle) != CY_RSLT_SUCCESS)
            xResult = CKR_GENERAL_ERROR;

        PKCS11_PAL_GetObjectValueCleanup( pxObject, ulObjectLength );
    }
    else
    {
        xResult = CKR_GENERAL_ERROR;
    }

    return xResult;
}
